AC_INIT(qperf, 0.4.9, general@lists.openfabrics.org)
AM_INIT_AUTOMAKE(qperf, 0.4.9)
AC_PROG_CC
AC_CHECK_LIB(ibverbs, ibv_open_device, RDMA=1)
AC_CHECK_LIB(ibverbs, ibv_open_xrc_domain, HAS_XRC=1)
AC_CHECK_LIB(rdmacm, rdma_create_id)
AM_CONDITIONAL(RDMA, test -n "$RDMA")
AM_CONDITIONAL(HAS_XRC, test -n "$HAS_XRC")
AC_CONFIG_FILES([qperf.spec])
AC_OUTPUT(Makefile src/Makefile)
